Simple Mistakes mean simple fixes :D

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="d-flex justify-content-center">
         <h1><span class="badge badge-secondary"><a href="https://www.automationanywhere.com/robotic-process-automation"
-                    class="text-light">What is a Robotic Process
+                    class="text-light">What is Robotic Process
                     Automation?</a></span></h1>
     </div>
     <div class="d-flex justify-content-center">
